# research

research/orchestrator/: .env.example  QUICK_FIXES_APPLIED.md  README.md  SCENARIOS.md  TOOL_INTEGRATION_SCENARIO.md  examples.py  main.py  pyproject.toml  test_prompts.py
research/orchestrator/orchestrator/: __init__.py  agent_state.py  config.py  llm.py  logger.py  mcp_manager.py  parsing.py  prompts.py
research/orchestrator/reports/: hello_ticket_run_analysis_20251014_181208.md  new_tool_adoption_run_analysis_20251014_230338.md
research/orchestrator/runs/: bug_triage_and_investigation_20251014_184814.jsonl  custom_task_20251014_185412.jsonl  documentation_sync_20251014_190810.jsonl  documentation_sync_20251014_192302.jsonl  hello_ticket_20251014_065124.jsonl  hello_ticket_20251014_065726.jsonl  hello_ticket_20251014_092901.jsonl  hello_ticket_20251014_093525.jsonl  hello_ticket_20251014_102149.jsonl  hello_ticket_20251014_102201.jsonl  hello_ticket_20251014_114259.jsonl  hello_ticket_20251014_122426.jsonl  hello_ticket_20251014_130123.jsonl  hello_ticket_20251014_131522.jsonl  hello_ticket_20251014_133146.jsonl  hello_ticket_20251014_135747.jsonl  hello_ticket_20251014_135903.jsonl  hello_ticket_20251014_174549.jsonl  hello_ticket_20251014_181208.jsonl  hello_ticket_20251014_182920.jsonl  new_tool_adoption_20251014_224413.jsonl  new_tool_adoption_20251014_230226.jsonl  new_tool_adoption_20251014_230338.jsonl
sample-gpt-api-call/: README.md  main.py  pyproject.toml  run.sh
